--- a/Cargo.toml
+++ b/Cargo.toml
@@ -84,3 +84,11 @@ path = "./day-12/part-1/atauveron.rs"
 [[bin]]
 name = "day-12-part-2-atauveron"
 path = "./day-12/part-2/atauveron.rs"
+
+[[bin]]
+name = "day-04-part-1-evqna"
+path = "./day-04/part-1/evqna.rs"
+
+[[bin]]
+name = "day-04-part-2-evqna"
+path = "./day-04/part-2/evqna.rs"
