--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 authors = []
 
 [dependencies]
+itertools = "0.8"
 
 [[bin]]
 name = "day-01-part-1-evqna"
@@ -84,6 +85,14 @@ path = "./day-12/part-1/atauveron.rs"
 [[bin]]
 name = "day-12-part-2-atauveron"
 path = "./day-12/part-2/atauveron.rs"
+
+[[bin]]
+name = "day-03-part-1-evqna"
+path = "./day-03/part-1/evqna.rs"
+
+[[bin]]
+name = "day-03-part-2-evqna"
+path = "./day-03/part-2/evqna.rs"
 
 [[bin]]
 name = "day-04-part-1-evqna"
