--- a/Cargo.toml
+++ b/Cargo.toml
@@ -117,3 +117,11 @@ path = "./day-07/part-1/evqna.rs"
 [[bin]]
 name = "day-07-part-2-evqna"
 path = "./day-07/part-2/evqna.rs"
+
+[[bin]]
+name = "day-08-part-1-evqna"
+path = "./day-08/part-1/evqna.rs"
+
+[[bin]]
+name = "day-08-part-2-evqna"
+path = "./day-08/part-2/evqna.rs"
