--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,19 +5,37 @@ on:
   pull_request:
     branches:
       - master
+  workflow_dispatch:
+    inputs:
+      days:
+        description: Run specific days (space delimiter)
+        required: true
+
+env:
+  INPUT_DAYS: ${{ github.event.inputs.days }}
 
 jobs:
   build:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-20.04
 
     steps:
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 2
+
+      # Fetch origin/master ref so that we can run diffs from PR head
+      - name: Fix remote refs
+        run: git fetch --no-tags --depth=2 origin master
 
       # setup supported languages
 
-      - uses: actions/setup-python@v1
+      - uses: actions/setup-python@v4
         with:
-          python-version: "3.7"
+          python-version: "3.8"
+          cache: pip
+      - name: deps-python
+        run: pip install --user -r requirements.txt
+        
       - uses: actions/setup-ruby@v1
       - uses: actions/setup-go@v1
         with:
@@ -28,9 +46,9 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: "12.13.1"
-      - uses: denolib/setup-deno@v1.1.0
-        with:
-          deno-version: 0.x
+      # - uses: denolib/setup-deno@v1.1.0
+      #   with:
+      #     deno-version: 0.x
       - uses: julia-actions/setup-julia@v1
         with:
           version: 1.2.0
@@ -60,17 +78,5 @@ jobs:
         if: steps.cache-npm.outputs.cache-hit != 'true'
         run: npm install
 
-      # install python packages if not cached
-      - uses: actions/cache@v1
-        name: cache-python
-        id: cache-python
-        with:
-          path: ~/.local/lib/python3.7/site-packages
-          key: ${{ runner.os }}-${{ hashFiles('requirements.txt') }}
-      - name: deps-python
-        if: steps.cache-python.outputs.cache-hit != 'true'
-        run: sudo apt-get install python3-setuptools && python3 -m pip install --user wheel && python3 -m pip install --user -r requirements.txt
-
-      # build
-      - name: build
+      - name: Run
         run: ./build.sh
